--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
             <div id="post">
                 <h1>Este es el titulo interesante del Blog</h1>
                 <p> Este es el parrafo desarrolado para explicar el tema de ramas</p>
