--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,9 @@
         <div id="container">
             <div id="post">
                 <h1>Este es el titulo interesante del Blog</h1>
-                <p> Este es el parrafo desarrolado para explicar el tema de ramas</p>
+                <p> Este es el parrafo desarrolado para explicar el tema de ramas
+                    Empezamos agregando este parrafo para identificar un cambio en la rama main
+                </p>
             </div>
          </div>
     </body>
