--- a/blogpost.html
+++ b/blogpost.html
@@ -11,8 +11,8 @@
             </div>
             <div id="post">
                 <h1>Este es el titulo interesante del Blog</h1>
-                <p> Este es el parrafo desarrolado para explicar el tema de ramas
-                    Empezamos agregando este parrafo para identificar un cambio en la rama main
+                <p> Este es el parrafo desarrolado para explicar el tema de ramas</p>
+                <p> Empezamos agregando este parrafo para identificar un cambio en la rama main
                 </p>
             </div>
          </div>
