--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,8 @@
             <div id="post">
                 <h1>Este es el titulo interesante del Blog</h1>
                 <p> Este es el parrafo desarrolado para explicar el tema de ramas</p>
-                <p> Empezamos agregando este parrafo para identificar un cambio en la rama main
+                <p> Empezamos agregando este parrafo para identificar un cambio en la rama main</p>
+                <p> Agregamos un nuevo parrafo en local</p>
                 </p>
             </div>
          </div>
